--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angular typescript webpack</title>
+    <title>Lollibond </title>
 </head>
 <body ng-cloak>
-<twitter-application></twitter-application>
+<lollibond-app></lollibond-app>
 </body>
 </html>
